# template-python-cmd

./: .gitignore  README.md  activate.sh  install  lint  make_venv.py  pyproject.toml  setup.py  test
.github/workflows/: lint.yml  push_macos.yml  push_ubuntu.yml  push_win.yml
src/template_python_cmd/: cli.py
tests/: test_cli.py
